<resources>
    <string name="app_name">Organization Application</string>
    <string name="mes_recettes">Mes recettes</string>
    <string name="quiche">Quiche poireaux-chèvre-lardons</string>
    <string name="puree">Purée de patate douce</string>
    <string name="veloute">Velouté de butternut-gingembre</string>
    <string name="gratin">Gratin de ravioles et courgettes</string>
    <string name="tarte">Tarte tomate-mozzarella</string>
    <string name="papillote">Papillote de saumon</string>
    <string name="crumble">Crumble aux pommes</string>
    <string name="add">Add</string>
    <string name="temps_de_preparation">Temps de préparation :</string>
    <string name="temps_de_cuisson">Temps de cuisson :</string>
    <string name="ingredients">Ingrédients :</string>
    <string name="etapes">Etapes :</string>
    <string name="ingredient1">1 pâte brisée</string>
    <string name="ingredient2">3 poireaux</string>
    <string name="ingredient3">1 boîte de lardons</string>
    <string name="ingredient4">1 bûche de chèvre</string>
    <string name="ingredient6">3 oeufs</string>
    <string name="ingredient5">20cL de lait</string>
    <string name="ingredient7">10cL de crème</string>
    <string name="ingredient8">sel, poivre</string>
    <string name="etape1">Faire revenir les poireaux</string>
    <string name="etape2">Quand les poireaux fondent, ajouter les lardons</string>
    <string name="etape3">Ajouter 2 tranches de chèvre pour lier</string>
    <string name="etape4">Dans un récipient, battre les oeufs</string>
    <string name="etape5">Y ajouter lait, crème, sel et poivre</string>
    <string name="etape6">Incorporer le mélange poireau-chèvre-lardons</string>
    <string name="etape7">Dans un plat à tarte, poser la pâte à tarte</string>
    <string name="etape8">Piquer la pâte</string>
    <string name="etape9">Déposer l\'appareil à quiche sur la pâte</string>
    <string name="etape10">Déposer des rondelles de chèvre</string>
    <string name="etape11">Cuire 40 minutes au four à 180 degrés</string>
    <string name="temps_30_min">30 min</string>
    <string name="temps_40_min">40 min</string>
    <string name="menu">Menu</string>
    <string name="liste_etapes">Liste des étapes</string>
    <string name="liste_ingredients">Liste des ingrédients</string>
</resources>