<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:tint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_dialer" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/quiche"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/quiche" />

            <TextView
                android:id="@+id/titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/quiche"
                android:textColor="#BF360C"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/label_temps_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/temps_de_preparation"
                android:textColor="#BF360C"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titre" />

            <TextView
                android:id="@+id/value_temps_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/temps_30_min"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/label_temps_preparation"
                app:layout_constraintTop_toTopOf="@id/label_temps_preparation" />

            <TextView
                android:id="@+id/label_temps_cuisson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/temps_de_cuisson"
                android:textColor="#BF360C"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_temps_preparation" />

            <TextView
                android:id="@+id/value_temps_cuisson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/temps_40_min"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@+id/label_temps_cuisson"
                app:layout_constraintTop_toTopOf="@+id/label_temps_cuisson" />

            <TextView
                android:id="@+id/label_ingrédients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/ingredients"
                android:textColor="#BF360C"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_temps_cuisson" />

            <CheckBox
                android:id="@+id/ingredient1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/ingredient1"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_ingrédients"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ingredient2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/ingredient2"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient1"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ingredient3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/ingredient3"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient2"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ingredient4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/ingredient4"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient3"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ingredient5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/ingredient6"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient4"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ingredient6"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/ingredient5"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient5"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ingredient7"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/ingredient7"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient6"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/ingredient8"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/ingredient8"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient7"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/label_recette"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/etapes"
                android:textColor="#BF360C"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient8" />

            <CheckBox
                android:id="@+id/etape1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/etape1"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_recette"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape2"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape1"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape3"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape2"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape4"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape3"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape5"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape4"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape6"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape6"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape5"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape7"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape7"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape6"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape8"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape8"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape7"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape9"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape8"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape10"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape10"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape9"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/etape11"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:checked="false"
                android:text="@string/etape11"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etape10"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>